--- a/style.css
+++ b/style.css
@@ -1,42 +1,41 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.para,
-.small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 1.125rem;
 }
 
 .para {
-  font-size: 22px;
+    font-weight: 900;
+    font-size: 2rem;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
+.small-para {
+    font-weight: 800;
+}
+
+
+.button-confirm { 
+    background: green;
+    color: white;
+    font-weight: 900;
+    font-size: 1.25rem;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
+.button-cancel {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-size: 1.25rem;
+}
+
+.text{
+    font-size: 1.375rem;
+}
+
+.text-child {
+    font-size: 1.375rem;
 }
 
 .child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+    font-size: 1rem;
+    font-weight: 800;
 }
